2.3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-multitool-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-multitool
  template:
    metadata:
      labels:
        app: nginx-multitool
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /usr/share/nginx/html
          readOnly: true
      - name: multitool
        image: wbitt/network-multitool
        command: ["sleep", "infinity"]
      volumes:
      - name: nginx-config
        configMap:
          name: web-content
